# VecTria

./: .gitignore  CMakeLists.txt
cmake/: FindAdvisor.cmake  FindVTune.cmake
delaunay.xcodeproj/: project.pbxproj
delaunay.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
delaunay.xcodeproj/xcuserdata/funke.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: common_types.h  tbb_types.h
include/ops/: DACTriangulator.h  EdgeExtractor.h  FacetteLookUpBuilder.h  NeighborUpdater.h  NeighborhoodUpdater.h  TriangulationMerger.h  TriangulationStitcher.h
includes/: CGAL.h  Checker.h  Datastructures.h  FileReader.h  Generator.h  GeometryStructures.h  Logger.h  MathTools.h  Predicates.h  SimplexOrientationFixer.h  Stats.h  TextTable.h  Triangulator.h  Verifier.h  dummy_fpu_control.h
src/: CMakeLists.txt  Logger.cpp  Predicates.cpp  main.cpp
tests/: CMakeLists.txt  ComprehensiveTriangulatorOrientationTest.h  GeometryTest.h  MemoryLayoutAoATest.h  MemoryLayoutPATest.h  MemoryLayoutVectorizedAoATest.h  MemoryLayoutVectorizedGroupedPATest.h  MemoryLayoutVectorizedPATest.h  TriangulatorTest.h  main.cpp
